--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ html, body {
 }
 .welcome hr {
     border-top: 2px solid #b4b4b4;
-    width: 95%;
+    width: 75%;
     margin-top: .3rem;
     margin-bottom: 1rem;
 }
@@ -65,6 +65,18 @@ html, body {
 .btn-primary:hover {
     background-color:  rgb(23, 105, 119);
     border: 1px solid rgb(7, 148, 148);
+}
+
+.btn-outline-secondary {
+    background-color: #d5d5d5;
+    color: rgb(23, 105, 119);
+    margin: .5rem
+}
+
+.btn-outline-secondary:hover {
+    color: #d5d5d5;
+    background-color: rgb(23, 105, 119);
+    margin: .5rem
 }
 
 /*--- Portfolio ---*/
@@ -111,12 +123,21 @@ footer {
     color: #d5d5d5;
     padding-top: 2rem;
 }
- .details .hr {
+ footer hr .light {
      border-top: 1pm solid #d5d5d5;
      width: 75%;
      margin-top: .8rem;
      margin-bottom: 1rem;
  }
+footer a {
+     color: #d5d5d5
+     }
+footer hr .light-100 {
+     border-top: 1pm solid #d5d5d5;
+     width: 100%;
+     margin-top: .8rem;
+     margin-bottom: 1rem;
+}
 
 /*----Media Queries ---*/
 @media (max-width: 992px) {
