--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,21 +68,55 @@ html, body {
 }
 
 .btn-outline-secondary {
-    background-color: #d5d5d5;
+    background-color: white;
     color: rgb(23, 105, 119);
-    margin: .5rem
+    margin: .5rem;
+    border: 1px solid rgb(23, 105, 119);
 }
 
 .btn-outline-secondary:hover {
-    color: #d5d5d5;
+    color: white;
     background-color: rgb(23, 105, 119);
-    margin: .5rem
+    margin: .5rem;
+    border: 1px solid rgb(23, 105, 119);
 }
 
 /*--- Portfolio ---*/
-.btn .btn-outline-secondary {
+
+/*--- Contact Us ---*/
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: rgb(7, 148, 148);
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: rgb(23, 105, 119);
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
 /*--- Social Links ---*/
 .social {
     font-size: 3rem;
